// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic config 1`] = `
"// Generated by dts-bundle-generator v9.5.1

export declare function a(): string;
export declare function b(): string;

export {};
"
`;

exports[`Basic config 2`] = `
"// Generated by dts-bundle-generator v9.5.1

export declare function b(): string;
export declare function c(): string;

export {};
"
`;
